media/style.css
body {
  height: 100vh;
  height: 100dvh;
  text-align: center;
}
textarea {
  resize: none;
}

.modal-close {
  position: absolute;
  top: 5px;
  right: 5px;
  width: 18px;
  height: 18px;
  padding: 0;
  border: none;
}

/* Color selector */
.hsl-selector {
  height: 25px;
  border-radius: 2rem;
  background: linear-gradient(to left in hsl longer hue, hsl(0, 65%, 50%) 0%, hsl(365, 65%, 50%) 100%);
}
.hsl-selector-indicator {
  width: 25px;
  height: 25px;
  outline: 2px var(--text-1) solid;
  border: 5px hsl(0, 65%, 50%) solid;
  border-radius: 2rem;
  box-sizing: border-box;
  position: absolute;
  left: 10px;
}

/* Add tasks area*/
.creation {
  position: relative;
  display: flex;
  gap: 5px;
  flex-direction: column;
  align-items: end;
  width: 30%;
  margin-inline: auto;
}
.creation select {
  position: absolute;
  top: 35px;
  right: 0px;
  margin: 5px 5px 0px 0px;
  padding: 0px 0px 5px 5px;
  border: none;
  outline: none;
  border-radius: 0px;
  font-size: 80%;
  font-family: Lexend;
  font-weight: bold;
  background: var(--bg-1);
}
#title {
  width: 100%;
  height: 30px;
  margin: 0px;
  border-radius: 0.5rem;
  box-sizing: border-box;
}
.task-add {
  display: inline-flex;
  gap: 5px;
  align-items: center;
  justify-content: center;
  width: 65px;
  height: 30px;
  margin: 0px;
  padding: 5px;
  box-sizing: border-box;
}
#desc {
  width: 100%;
  margin: 0px;
  border-radius: 0.5rem;
  box-sizing: border-box;
}

/* Toolbar / Spaces */
#toolbar, #spaces {
  display: flex;
  gap: 5px;
  align-items: center;
  width: 50%;
  margin: 2px auto;
  box-sizing: border-box;
}
#toolbar div, #toolbar button {
  display: flex;
  align-items: center;
  width: fit-content;
  color: var(--text-1);
  padding: 2px 6px 2px 2px;
  border: none;
  border-radius: 0.5rem;
  background-color: var(--bg-2);
  transition: 500ms;
}
#toolbar button:hover {
  background-color: var(--bg-3);
}
#toolbar button svg {
  fill: var(--text-1);
}
#toolbar span {
  flex: 1;
}
.total-tasks {
  pointer-events: none;
  opacity: 0;
  transition: opacity 250ms;
}
.open-tasks:hover + .total-tasks {
  pointer-events: auto;
  opacity: 1;
}

#spaces {
  display: flex;
  gap: 5px;
  flex-wrap: wrap;
}
#spaces button.add {
  color: var(--text-1);
  padding: 0px;
  border: none;
  background: none;
}
#spaces button.add svg {
  width: 16px;
  fill: var(--text-1);
  stroke: var(--text-1);
}
#spaces button {
  display: flex;
  align-items: center;
  border-radius: 0.2rem;
  border-color: hsl(var(--color), 65%, 50%);
}
#spaces button:hover:not(.add), #spaces button[selected] {
  color: var(--bg-1);
  background-color: hsl(var(--color), 65%, 50%);
}
#spaces button[selected] svg {
  fill: var(--bg-1);
  stroke: var(--bg-1);
}
#spaces button svg {
  width: 0px;
}
#spaces button:hover svg {
  width: 15px;
}

/* Data menu */
.data-menu {
  position: fixed;
  left: 0;
  bottom: 0;
  padding: 10px 15px;
  border: 5px var(--bg-1) solid;
  border-left: none;
  border-bottom: none;
  border-radius: 0px 1rem 0px 0px;
  background-color: var(--bg-3);
}
.data-menu button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

/* Tasks */
.task {
  display: flex;
  width: 50%;
  margin: 10px auto 0px;
  padding: 5px;
  text-align: left;
  border-radius: 0.25rem;
  background-color: var(--bg-2);
  transition: 500ms;
  box-sizing: border-box;
}
.task:hover {
  background-color: var(--bg-3);
}
.task > div {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.task > div > span {
  white-space: break-spaces;
  word-break: break-word;
}
[data-open="false"] {
  filter: brightness(0.8);
  text-decoration: line-through;
}
.appear {
  animation-name: appear;
  animation-duration: 1s;
  animation-iteration-count: 1;
}
@keyframes appear {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* Editing */
.task input, .task textarea {
  width: 100%;
  margin: 0px;
  border-radius: 0.5rem;
  box-sizing: border-box;
}
.task svg {
  margin: auto 8px;
  cursor: pointer;
  opacity: 0;
}
.task:hover svg, .task:has(textarea) svg {
  opacity: 1;
}

/* Custom cehckbox */
.container {
  display: block;
  position: relative;
  padding-left: 35px;
  cursor: pointer;
  font-size: 22px;
  user-select: none;
}
.container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0px;
  width: 0px;
}
.checkmark {
  position: absolute;
  top: 50%;
  left: 5px;
  height: 20px;
  width: 20px;
  transform: translateY(-50%);
  border-radius: 0.25rem;
  background-color: var(--text-1);
  transition: 500ms;
}
input[type="checkbox"][disabled] + .checkmark {
  cursor: not-allowed;
  filter: brightness(0.5);
}

.task:hover input ~ .checkmark {
  background-color: var(--text-2);
}
.task input:checked ~ .checkmark {
  background-color: var(--blue-1);
}

.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}
.container input:checked ~ .checkmark:after {
  display: block;
}

.container .checkmark:after {
  left: 6px;
  top: 3px;
  width: 5px;
  height: 10px;
  border: solid var(--text-1);
  border-width: 0px 3px 3px 0px;
  transform: rotate(45deg);
}

/* MD */
blockquote {
  position: relative;
  margin: 0px;
  padding-left: 6px;
}
blockquote::before {
  content: "";
  position: absolute;
  top: 0px;
  bottom: 0px;
  left: 0px;
  display: block;
  height: 100%;
  width: 4px;
  border-radius: 1rem;
  background: var(--bg-4);
}
code {
  padding: 2px;
  border-radius: 0.25rem;
  background: var(--bg-0);
}

/* Mobile devices */
@media (max-width: 700px) {
  .creation {
    width: 90%;
  }
  .task, #tool, #toolbar, #spaces {
    width: 90%;
  }
  #spaces button svg {
    width: 15px;
  }
  .task svg {
    opacity: 1;
  }
}

